feat(helloworld): 实现用户登录和贷款申请功能
- 新增用户登录和贷款申请的相关实体类和接口
- 实现了不同渠道的登录和贷款申请策略- 添加了模板方法模式和策略模式的运用
- 集成了 Lombok 库以减少样板代码

--- a/demo-helloworld/pom.xml
+++ b/demo-helloworld/pom.xml
@@ -38,6 +38,14 @@
 			<groupId>cn.hutool</groupId>
 			<artifactId>hutool-all</artifactId>
 		</dependency>
+
+    <!-- lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+      <scope>provided</scope>
+    </dependency>
 	</dependencies>
 
     <build>
